# fintech-insight-app

./: .gitignore  pyproject.toml  readme.md
src/: config.py  main.py  processing.py  reports.py  services.py  utils.py  views.py
test_results/: test_results_main.html  test_results_processing.html  test_results_reports.html  test_results_services.html  test_results_utils.html  test_results_views.html
tests/: conftest.py  test_main.py  test_processing.py  test_reports.py  test_services.py  test_utils.py  test_views.py
